RESOLVED FIXED235407
Load event never firing after form is submitted
https://bugs.webkit.org/show_bug.cgi?id=235407
Summary Load event never firing after form is submitted
Sam Sneddon [:gsnedders]
Reported 2022-01-20 08:48:17 PST
On the above test (note: this requires pop-ups to be allowed), the test is constantly resulting in a harness TIMEOUT. The underlying cause of this seems to be us never actually firing the load event for the test document.
Attachments
WIP patch (3.66 KB, patch)
2022-03-04 09:33 PST, Chris Dumez
no flags
Patch (9.44 KB, patch)
2022-03-04 09:50 PST, Chris Dumez
no flags
Patch (12.10 KB, patch)
2022-03-04 10:45 PST, Chris Dumez
ews-feeder: commit-queue-
Radar WebKit Bug Importer
Comment 1 2022-01-20 08:48:29 PST
Sam Sneddon [:gsnedders]
Comment 2 2022-01-21 04:00:31 PST
Reduces down to: <div id=log></div> <form action=about:blank target=_blank><input type=hidden name=input></form> <script> const t1 = performance.now(); const submitter = document.querySelector("form"); submitter.submit(); window.onload = () => { document.querySelector("#log").textContent = `loaded after ${performance.now() - t1}ms`; } </script>
Alexey Proskuryakov
Comment 3 2022-01-23 17:52:06 PST
I looked through our other form submission bugs, but this one seems new.
Chris Dumez
Comment 4 2022-03-04 09:10:52 PST
I am investigating.
Chris Dumez
Comment 5 2022-03-04 09:33:16 PST
Created attachment 453849 [details] WIP patch
Chris Dumez
Comment 6 2022-03-04 09:50:59 PST
Chris Dumez
Comment 7 2022-03-04 10:45:19 PST
Geoffrey Garen
Comment 8 2022-03-04 12:25:40 PST
Comment on attachment 453857 [details] Patch r=me
EWS
Comment 9 2022-03-04 12:36:21 PST
Committed r290841 (248077@main): <https://commits.webkit.org/248077@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 453857 [details].
Note You need to log in before you can comment on or make changes to this bug.